--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ numpy==1.26.1
 transformers==4.45.2
 torch==2.4.1
 openai==0.28.1
-chromadb==0.4.13
+# chromadb==0.4.13  # Commented out due to build issues
 cryptography==41.0.4
 python-dateutil==2.8.2
 Flask==2.3.3
